SUBDIRS = src

# Vanish & Mr.Proper
maintainer-clean-local:
	find . -name 'Makefile.in' -delete
	find . -name 'Makefile' -delete
	rm -rf configure config.guess config.log config.status config.sub aclocal.m4 depcomp install-sh libtool ltmain.sh missing autoscan.log
	rm -f config.h config.h.in ylwrap
